# src/controller/servico_controller.js
@@ -1,6 +1,11 @@
 const Controller = require('./controller.js');
 const Servico = require('../model/servico.js')
 
+const base = Controller(Servico)
 module.exports = {
-    ...Controller(Servico)
+    ...base,
+    async add(req, res) {
+        req.body.idPrestador ??= req.usuario._id
+        return base.add(req, res)
+    }
 }
